# $Id$

2007-03-06	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: cascade fetch strategy
	also forced for spooked properties.

2007-03-05	Ivan Y. Khvostishkov

	* main/Base/DateRange.class.php: fixed default delimiters.

2007-03-05	Konstantin V. Arkhipov

	* main/DAOs/: getIdName() moved from StorableDAO to GenericDAO.

2007-03-04	Konstantin V. Arkhipov

	* main/Utils/DaoMoveHelper.class.php, main/Utils/DaoUtils.class.php,
	core/Form/Primitives/PrimitiveIdentifierList.class.php: copied from
	0.8.

2007-03-03	Konstantin V. Arkhipov

	* meta/: generation gap for proto-classes implemented, as requested by
	Antony.

	* meta/classes/MetaConfiguration.class.php: now checks for stale
	autogenerated files.

	* core/Form/PlainForm.class.php: getChoiceValue/getActualChoiceValue
	restored.

	* core/Form/PrimitiveList.class.php,
	core/Form/PrimitiveMultiList.class.php: behaviour synced to be
	0.8-like.

2007-03-03	Sergey S. Sergeev

	* doc/README: php.ini recommended settings introduced.

	* core/Form/Primitives/FiltrablePrimitive.class.php,
	core/Form/Primitives/PrimitiveArray.class.php: PrimitiveArray
	implements FiltrablePrimitive.

	* core/Form/Primitives/PrimitiveString.class.php, 
	core/Form/Primitives/PrimitiveNumber.class.php,
	core/Form/Primitives/PrimitiveArray.class.php: apply filters before
	check values.

2007-03-02	Dmitry E. Demidov

	* core/Cache/WatermarkedPeer.class.php, 
	main/DAOs/Workers/FileSystemDaoWorker.class.php,
	main/DAOs/Workers/SmartDaoWorker.class.php,
	main/DAOs/Workers/VoodooDaoWorker.class.php: added ability to set separate 
	watermark on classes.

2007-02-28	Anton E. Lebedevich

	* main/Base/LightMetaProperty.class.php: columnIdName optimized out;
	i.e. dropped.

2007-02-28	Konstantin V. Arkhipov

	* meta/: implemented recursion checking for 1-to-1 relations, forces
	cascade fetch strategy for single properties, if found.

2007-02-27	Ivan Y. Khvostishkov

	* main/Utils/TextUtils.class.php,